<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_description</name>
  <version>0.0.0</version>
  <description>
    URDF description for Universal Robots
  </description>

  <author>Nadia Hammoudeh Garcia</author>
  <author>Kelsey Hawkins</author>
  <author>G.A. vd. Hoorn</author>
  <author>Lovro Ivanov</author>
  <author>Mathias Ludtke</author>
  <author>Wim Meeussen</author>
  <author>Felix Messmer</author>
  <author>Miguel Prada Sarasola</author>
  <author>Denis Stogl</author>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
  <maintainer email="denis.stogl@picknik.ai">Denis Stogl</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
