<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_moveit_config</name>
  <version>2.4.13</version>
  <description>
     An example package with MoveIt2 configurations for UR robots.
  </description>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <maintainer email="dipentima@fzi.de">Vincenzo Di Pentima</maintainer>

  <license>Apache2.0</license>

  <author email="wilbrandt@fzi.de">Robert Wilbrandt</author>
  <author email="denis@stoglrobotics.de">Denis Stogl</author>
  <author email="lovro.ivanov@gmail.com">Lovro Ivanov</author>
  <author email="zelenak@picknik.ai">Andy Zelenak</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>warehouse_ros_sqlite</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
