<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_moveit_config</name>
  <version>2.5.2</version>
  <description>
     An example package with MoveIt2 configurations for UR robots.
  </description>

  <maintainer email="feex@universal-robots.com">Felix Exner</maintainer>
  <maintainer email="rsk@universal-robots.com">Rune Søe-Knudsen</maintainer>
  <maintainer email="ros@universal-robots.com">Universal Robots A/S</maintainer>

  <license>Apache2.0</license>

  <author email="lovro.ivanov@gmail.com">Lovro Ivanov</author>
  <author email="zelenak@picknik.ai">Andy Zelenak</author>
  <author email="dipentima@fzi.de">Vincenzo Di Pentima</author>
  <author email="denis@stoglrobotics.de">Denis Stogl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>warehouse_ros_sqlite</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
