<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_robot_driver</name>
  <version>2.0.2</version>
  <description>The new driver for Universal Robots UR3, UR5 and UR10 robots with CB3 controllers and the e-series.</description>

  <author>Thomas Timm Andersen</author>
  <author>Simon Rasmussen</author>
  <author>Felix Exner</author>
  <author>Lea Steffen</author>
  <author>Tristan Schnell</author>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
  <maintainer email="denis.stogl@picknik.ai">Denis Stogl</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ur_client_library</depend>
  <depend>ur_controllers</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_msgs</depend>

  <!--Depencency such that the bringup package also gets installed-->
  <exec_depend>ur_bringup</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>ur_bringup</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
