<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_robot_driver</name>
  <version>3.6.0</version>
  <description>
    The ROS 2 driver for Universal Robots manipulators. This driver supports all robot
    models as listed in the documentation. For robot controllers, PolyScope X, PolyScope 5 and
    CB3 controllers are supported.
  </description>

  <maintainer email="feex@universal-robots.com">Felix Exner</maintainer>
  <maintainer email="rsk@universal-robots.com">Rune Søe-Knudsen</maintainer>
  <maintainer email="ros@universal-robots.com">Universal Robots A/S</maintainer>

  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>
  <url type="website">https://docs.universal-robots.com/Universal_Robots_ROS_Documentation/</url>

  <author email="denis@stoglrobotics.de">Denis Stogl</author>
  <author email="wilbrandt@fzi.de">Robert Wilbrandt</author>
  <author email="grosse@fzi.de">Marvin Große Besselmann</author>
  <author email="lovro.ivanov@gmail.com">Lovro Ivanov</author>
  <author email="zelenak@picknik.ai">Andy Zelenak</author>
  <author email="dipentima@fzi.de">Vincenzo Di Pentima</author>
  <author>Thomas Timm Andersen</author>
  <author>Simon Rasmussen</author>
  <author>Felix Exner</author>
  <author>Lea Steffen</author>
  <author>Tristan Schnell</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ur_client_library</depend>
  <depend>ur_controllers</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_msgs</depend>

  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pose_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
