<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_ros2_control_demos</name>
  <version>0.0.0</version>
  <description>ROS2 demo package for UR robot testing</description>
  <author>Lovro Ivanov</author>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>

  <license>Apache-2.0</license>
  <license>BSD-2-Clause</license>
  <license>Zlib</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
