<?xml version="1.0"?>
<package format="3">
  <name>ur_rtde_client</name>
  <version>0.0.1</version>
  <description>Standalone RTDE client</description>

  <maintainer email="sergi.romero-valderas@teradyne-robotics.com">Sergi Romero</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ur_client_library</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <depend>yaml-cpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>